<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- region { common button value } -->
    <string name="acb_common_button_cancel">취소</string>
    <string name="acb_common_button_confirm">확인</string>
    <string name="acb_common_button_retry">다시 시도</string>
    <string name="acb_common_button_close">닫기</string>
    <string name="acb_common_button_remove">제거하기</string>
    <string name="acb_common_button_submit">제출하기</string>
    <string name="acb_common_button_setting">설정</string>
    <string name="acb_common_button_app_open">앱 열기</string>
    <string name="acb_common_button_close_today">오늘 하루 보지 않기</string>
    <string name="acb_common_button_close_never">다시 보지 않기</string>
    <string name="acb_common_button_close_week">일주일간 보지 않기</string>
    <string name="acb_common_button_setting_off">해제하기</string>
    <!-- endregion -->
    <!-- region #common -->
    <string name="acb_common_hh">%s시간</string>
    <string name="acb_common_mm">%s분</string>
    <string name="acb_common_page_error">에러가 발생했습니다.</string>
    <string name="acb_common_page_empty">내용이 없습니다.</string>
    <string name="acb_common_sdk_version">버전</string>
    <string name="acb_common_service_term">서비스 이용약관</string>
    <string name="acb_common_menu_notice">공지사항</string>
    <string name="acb_common_menu_terms">이용약관</string>
    <string name="acb_common_webview_ssl_warning">이 사이트의 보안 인증서는 신뢰하는 보안 인증서가 아닙니다.\n\n계속하시겠습니까?</string>
    <string name="acb_common_webview_ssl_continue">계속하기</string>
    <string name="acb_common_webview_ssl_stop">취소</string>
    <string name="acb_common_message_use_aaid">티켓적립 서비스 및 고객 응대를 위해 광고ID 를 이용합니다.</string>
    <string name="acb_common_message_error">네트워크가 연결되어 있지 않거나 일시적인 오류가 발생하였습니다.\n잠시 후 다시 시도해 주세요.</string>
    <string name="acb_common_message_always_activity_finished">사용하고 있는 폰에 오동작을 일으킬 수 있는 개발자용 옵션이 설정되어있어, 요청하신 작업을 수행할 수 없습니다.\n\n해당 옵션 설정을 해제한 후, 다시 시도해 주세요.\n\n(환경설정 > 개발자 옵션 > 액티비티 유지 안 함(활동보관안함))</string>
    <string name="acb_common_message_advertise_blocked">네트워크 연결이 불안정하거나 광고 차단 기능이 설정되어 있습니다.\n설정을 확인하시고 다시 시도해주세요</string>
    <string name="acb_common_message_ad_age_not_support">해당 연령은 서비스를 이용할 수 없습니다.</string>
    <string name="acb_common_message_is_not_available_name">올바른 이름을 적어주세요</string>
    <string name="acb_common_message_is_not_available_phone_num">휴대폰 번호를 정확히 입력해주세요</string>
    <string name="acb_common_message_is_not_agree_service">개인정보 제공에 동의해주세요</string>
    <string name="acb_common_message_limit_ad_tracking">광고 참여를 위해서는 광고ID 수집을 위해 \'광고 개인 최적화 선택 해제\'를 끄고 다시 시도해주세요.</string>

    <!-- endregion -->
    <!-- region # session -->
    <string name="acb_common_message_profile_not_set">사용자 정보가 존재하지 않습니다.</string>
    <string name="acb_common_message_session_expire">인증정보가 만료 되었습니다.</string>
    <!-- endregion -->
    <!-- region # attendance -->
    <string name="acb_common_attendance_dialog_title">출첵 이벤트</string>
    <string name="acb_common_attendance_dialog_warning_title">주의사항</string>
    <string name="acb_common_attendance_dialog_warning_description_1">\u2022 신규 이용자에게 드리는 이벤트입니다</string>
    <string name="acb_common_attendance_dialog_warning_description_2"><![CDATA[\u2022 본 이벤트는 <strong>더보기</strong> 메뉴에서 확인 가능합니다]]></string>
    <string name="acb_common_attendance_reward_item_day">%s일</string>
    <string name="acb_common_attendance_reward_item_title">출석체크</string>
    <string name="acb_common_attendance_dialog_alert_message">수령하지 않은 보상이 있습니다\n그래도 이벤트 팝업을 닫으시겠습니까?\n\n내일 다시 방문하시면 수령 가능 합니다</string>
    <!-- endregion -->
    <!-- region # support // inspection, notice, terms -->
    <string name="acb_common_inspection_title">서비스 점검중</string>
    <string name="acb_common_inspection_period">점검시간 %1$s ~ %2$s</string>
    <string name="acb_common_inspection_description">보다 나은 서비스를 위해 점검을 진행하고 있습니다.\n이용에 불편을 드려 대단히 죄송합니다.</string>
    <string name="acb_common_inspection_description_link">점검 내용 보기</string>
    <string name="acb_common_notice_detail_html"><![CDATA[<html><head><meta name="viewport" content="width=device-width, initial-scale=1.0"></head><body>%s</body></html>]]></string>
    <!-- endregion -->
    <!-- region # popup age verify  -->
    <string name="acb_common_age_popup_title">본 서비스를 계속 이용하시려면\n연령 정보가 필요합니다.</string>
    <string name="acb_common_age_popup_subject">구글 플레이 스토어 정책에 의해\n연령 정보 입력이 필요합니다.</string>
    <string name="acb_common_age_popup_description">\u2022 본 서비스는 맞춤형 컨텐츠 및 광고 제공을 위해\n광고ID (AAID)를 수집해 이용합니다.</string>
    <string name="acb_common_age_popup_message_wrong_format">올바르지 않은 생년월일입니다.</string>
    <string name="acb_common_age_popup_year">년도</string>
    <string name="acb_common_age_popup_month">월</string>
    <string name="acb_common_age_popup_day">일</string>
    <!-- endregion -->
    <!-- region # setting(config) -->
    <string name="acb_common_setting_title">더 보기</string>
    <string name="acb_common_setting_config">설정</string>
    <string name="acb_common_setting_notification">알림창 상태바</string>
    <string name="acb_common_setting_cs">고객센터</string>
    <string name="acb_common_setting_inquire">문의하기</string>
    <string name="acb_common_setting_event">이벤트</string>
    <string name="acb_common_setting_mission">출첵 이벤트</string>
    <string name="acb_common_setting_notice">공지사항</string>
    <string name="acb_common_setting_reward_inquiry">미적립 문의 내역</string>
    <string name="acb_common_setting_terms">이용약관</string>
    <string name="acb_common_setting_license">라이센스</string>
    <string name="acb_common_setting_app">앱정보</string>
    <string name="acb_common_setting_etc">기타</string>
    <string name="acb_common_setting_sdk_version">버전정보</string>
    <string name="acb_common_setting_alliance">오퍼월 제휴 문의</string>
    <string name="acb_common_setting_restoration_hidden_AD_title">숨김 광고 복구</string>
    <string name="acb_common_setting_restoration">복구하기</string>
    <!-- endregion -->
    <string name="acb_library_ad_cta_default" translatable="false">더 알아보기</string>
</resources>